--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 project(Mimir)
 
+add_subdirectory(Mimir)
+
 file(GLOB MimirSources "Mimir/src/*.h" "Mimir/src/*.cpp")
 file(GLOB AppSources "source/app/*.cpp")
 
@@ -11,7 +13,7 @@ include_directories(${CMAKE_SOURCE_DIR}/Mimir)
 include_directories(${CMAKE_SOURCE_DIR}/app)
 include_directories(include)
 
-add_library(Mimir STATIC ${MimirSources})
+add_library(Mimir STATIC Mimir/Model Mimir/Inference ${MimirSources})
 add_executable(app app/app.cpp)
 
 target_link_libraries(app Mimir)
